--- a/packages/analyzer/package.json
+++ b/packages/analyzer/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@monorepo/feature-a",
+  "name": "@flakiness-detective/analyzer",
   "version": "0.1.0",
   "private": true,
   "main": "./dist/index.js",
@@ -22,8 +22,8 @@
     "test:watch": "vitest"
   },
   "dependencies": {
-    "@monorepo/core": "workspace:*",
-    "@monorepo/utils": "workspace:*"
+    "@flakiness-detective/core": "workspace:*",
+    "@flakiness-detective/utils": "workspace:*"
   },
   "devDependencies": {
     "typescript": "^5.3.3"
