--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@monorepo/core",
+  "name": "@flakiness-detective/core",
   "version": "0.1.0",
   "private": true,
   "main": "./dist/index.js",
