feat: implement core functionality and fix build issues
- Implement FlakinessDetective core class with DBSCAN clustering
- Create adapters for data and embeddings
- Fix circular dependency between core and utils
- Add type definitions for density-clustering
- Update project references in tsconfig files
- Fix import paths across packages
- Fix linting issues and exclude compiled files from linting
- Fix TypeScript errors in adapters package

--- a/biome.json
+++ b/biome.json
@@ -5,6 +5,14 @@
   },
   "linter": {
     "enabled": true,
+    "ignore": [
+      "**/*.js",
+      "**/*.d.ts",
+      "**/*.js.map",
+      "**/*.d.ts.map",
+      "node_modules",
+      "dist"
+    ],
     "rules": {
       "recommended": true,
       "correctness": {
