--- a/packages/cli/tsconfig.json
+++ b/packages/cli/tsconfig.json
@@ -1,8 +1,17 @@
 {
   "extends": "../../tsconfig.json",
+  "references": [
+    { "path": "../core" },
+    { "path": "../utils" },
+    { "path": "../adapters" },
+    { "path": "../analyzer" },
+    { "path": "../visualization" }
+  ],
   "compilerOptions": {
     "outDir": "./dist",
-    "rootDir": "./src"
+    "rootDir": "./src",
+    "skipLibCheck": true,
+    "declaration": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist", "**/*.test.ts"]
