--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -25,6 +25,7 @@
     "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@flakiness-detective/utils": "workspace:*",
     "density-clustering": "^1.3.0"
   }
 }
