--- a/packages/adapters/package.json
+++ b/packages/adapters/package.json
@@ -23,7 +23,8 @@
   },
   "dependencies": {
     "@flakiness-detective/core": "workspace:*",
-    "@flakiness-detective/utils": "workspace:*"
+    "@flakiness-detective/utils": "workspace:*",
+    "@google/generative-ai": "^0.24.1"
   },
   "devDependencies": {
     "typescript": "^5.3.3"
