--- a/package.json
+++ b/package.json
@@ -7,12 +7,19 @@
     "packages/*"
   ],
   "scripts": {
-    "build": "turbo build",
+    "build": "pnpm clean-dist && pnpm exec tsc -b",
+    "build:utils": "pnpm exec tsc -b packages/utils",
+    "build:core": "pnpm exec tsc -b packages/core",
+    "build:adapters": "pnpm exec tsc -b packages/adapters",
+    "build:analyzer": "pnpm exec tsc -b packages/analyzer",
+    "build:visualization": "pnpm exec tsc -b packages/visualization",
+    "build:cli": "pnpm exec tsc -b packages/cli",
     "dev": "turbo dev",
     "lint": "turbo lint",
     "test": "vitest run",
     "test:watch": "vitest",
-    "clean": "turbo clean && rm -rf node_modules",
+    "clean": "pnpm clean-dist && rm -rf node_modules",
+    "clean-dist": "pnpm exec tsc -b --clean",
     "format": "turbo format",
     "typecheck": "turbo typecheck",
     "prepare": "husky",
