--- a/packages/analyzer/tsconfig.json
+++ b/packages/analyzer/tsconfig.json
@@ -1,9 +1,6 @@
 {
   "extends": "../../tsconfig.json",
-  "references": [
-    { "path": "../core" },
-    { "path": "../utils" }
-  ],
+  "references": [{ "path": "../core" }, { "path": "../utils" }],
   "compilerOptions": {
     "outDir": "./dist",
     "rootDir": "./src",
@@ -11,9 +8,5 @@
     "declaration": true
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "**/*.test.ts"],
-  "references": [
-    { "path": "../core" },
-    { "path": "../utils" }
-  ]
+  "exclude": ["node_modules", "dist", "**/*.test.ts"]
 }
