--- a/packages/adapters/package.json
+++ b/packages/adapters/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "@flakiness-detective/core": "workspace:*",
     "@flakiness-detective/utils": "workspace:*",
+    "@google-cloud/firestore": "^7.11.6",
     "@google/generative-ai": "^0.24.1"
   },
   "devDependencies": {
