feat: add link validation script and tests
- Add TypeScript link checker (scripts/check-links.ts)
  - Validates internal file links (relative and absolute paths)
  - Checks URL format for external links
  - Skips mailto, tel, and anchor links
  - Reports broken links with line numbers and context

- Add tests for link checker (scripts/check-links.test.ts)
  - Validates all documentation has valid links
  - Ensures validate:links script is configured

- Add pnpm validate:links command
  - Easy to run: pnpm validate:links
  - Returns exit code 1 if broken links found

- Update vitest config to discover tests in scripts/
  - Tests now run from both packages/ and scripts/

- Add tsx dependency for running TypeScript scripts

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "clean-dist": "pnpm exec tsc -b --clean",
     "format": "turbo format",
     "typecheck": "turbo typecheck",
+    "validate:links": "tsx scripts/check-links.ts",
     "prepare": "husky",
     "lint-staged": "biome check --apply --no-errors-on-unmatched --files",
     "changeset": "changeset",
@@ -37,6 +38,7 @@
     "@types/node": "^24.7.0",
     "@vitest/coverage-v8": "^1.2.1",
     "husky": "^9.0.11",
+    "tsx": "^4.20.6",
     "turbo": "^1.11.3",
     "typescript": "^5.3.3",
     "vitest": "^1.2.1"
