chore: prepare packages for npm publication
- Configure 4 packages for public npm release
  - @flakiness-detective/utils
  - @flakiness-detective/core
  - @flakiness-detective/adapters
  - @flakiness-detective/cli

Package Configuration:
- Remove 'private: true' from all 4 packages
- Add publishConfig with 'access: public'
- Add comprehensive metadata (description, keywords, author)
- Add repository links with package-specific directories
- Add homepage and bug tracking URLs
- Add 'files' array to control published content
- Add 'engines' constraint (node >= 22)
- Add CLI bin entry for flakiness-detective command

Dependency Management:
- Convert workspace:* to ^0.1.0 for published packages
- Move @google-cloud/firestore to optional peer dependency
- Move @google/generative-ai to optional peer dependency
- Keep them as devDependencies for development/testing
- Remove unused dependencies from CLI (analyzer, visualization)

Licensing:
- Copy MIT LICENSE to all 4 packages
- Ensure license field matches in package.json

Release Workflow:
- Update release.yml comments to reflect public packages
- Changesets will now publish these 4 packages to npm
- Requires NPM_TOKEN secret (user will configure)

Remaining Private:
- @flakiness-detective/analyzer (placeholder)
- @flakiness-detective/visualization (placeholder)

This enables users to install packages from npm:
  pnpm add @flakiness-detective/core
  pnpm add @flakiness-detective/adapters
  pnpm add -g @flakiness-detective/cli

--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,15 +1,45 @@
 {
   "name": "@flakiness-detective/cli",
   "version": "0.1.0",
-  "private": true,
+  "description": "Command-line interface for Flakiness Detective - Detect and analyze flaky tests from the terminal",
+  "keywords": [
+    "testing",
+    "flakiness",
+    "test-automation",
+    "cli",
+    "playwright",
+    "command-line"
+  ],
+  "author": "prosdevlab",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/prosdev/flakiness-detective-ts.git",
+    "directory": "packages/cli"
+  },
+  "homepage": "https://github.com/prosdev/flakiness-detective-ts/tree/main/packages/cli#readme",
+  "bugs": {
+    "url": "https://github.com/prosdev/flakiness-detective-ts/issues"
+  },
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "bin": {
+    "flakiness-detective": "./dist/index.js"
+  },
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
       "import": "./dist/index.js",
       "require": "./dist/index.js"
     }
+  },
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE"
+  ],
+  "publishConfig": {
+    "access": "public"
   },
   "scripts": {
     "build": "tsc",
@@ -22,13 +52,14 @@
     "test:watch": "vitest"
   },
   "dependencies": {
-    "@flakiness-detective/core": "workspace:*",
-    "@flakiness-detective/adapters": "workspace:*",
-    "@flakiness-detective/analyzer": "workspace:*",
-    "@flakiness-detective/utils": "workspace:*",
-    "@flakiness-detective/visualization": "workspace:*"
+    "@flakiness-detective/core": "^0.1.0",
+    "@flakiness-detective/adapters": "^0.1.0",
+    "@flakiness-detective/utils": "^0.1.0"
   },
   "devDependencies": {
     "typescript": "^5.3.3"
+  },
+  "engines": {
+    "node": ">=22"
   }
 }
