--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,7 +1,28 @@
 {
   "name": "@flakiness-detective/core",
   "version": "0.1.0",
-  "private": true,
+  "description": "Core detection engine for identifying flaky tests using AI embeddings and DBSCAN clustering",
+  "keywords": [
+    "testing",
+    "flakiness",
+    "test-automation",
+    "playwright",
+    "clustering",
+    "dbscan",
+    "ai",
+    "machine-learning"
+  ],
+  "author": "prosdevlab",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/prosdev/flakiness-detective-ts.git",
+    "directory": "packages/core"
+  },
+  "homepage": "https://github.com/prosdev/flakiness-detective-ts/tree/main/packages/core#readme",
+  "bugs": {
+    "url": "https://github.com/prosdev/flakiness-detective-ts/issues"
+  },
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "exports": {
@@ -10,6 +31,14 @@
       "import": "./dist/index.js",
       "require": "./dist/index.js"
     }
+  },
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE"
+  ],
+  "publishConfig": {
+    "access": "public"
   },
   "scripts": {
     "build": "tsc",
@@ -21,11 +50,14 @@
     "test": "vitest run",
     "test:watch": "vitest"
   },
+  "dependencies": {
+    "@flakiness-detective/utils": "^0.1.0",
+    "density-clustering": "^1.3.0"
+  },
   "devDependencies": {
     "typescript": "^5.3.3"
   },
-  "dependencies": {
-    "@flakiness-detective/utils": "workspace:*",
-    "density-clustering": "^1.3.0"
+  "engines": {
+    "node": ">=22"
   }
 }
