--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,8 +1,8 @@
 name: Release
 
 # This workflow runs after CI succeeds on the main branch.
-# By default, all packages are private and won't be published to npm.
-# To enable publishing: set "private": false in package.json and add NPM_TOKEN secret.
+# Publishes public packages (@flakiness-detective/utils, core, adapters, cli) to npm.
+# Requires NPM_TOKEN secret to be configured in repository settings.
 # See README.md for detailed setup instructions.
 
 on:
