--- a/packages/adapters/package.json
+++ b/packages/adapters/package.json
@@ -1,7 +1,27 @@
 {
   "name": "@flakiness-detective/adapters",
   "version": "0.1.0",
-  "private": true,
+  "description": "Data adapters and AI providers for Flakiness Detective - Firestore, Filesystem, Google AI, and more",
+  "keywords": [
+    "testing",
+    "flakiness",
+    "test-automation",
+    "adapters",
+    "firestore",
+    "google-ai",
+    "embeddings"
+  ],
+  "author": "prosdevlab",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/prosdev/flakiness-detective-ts.git",
+    "directory": "packages/adapters"
+  },
+  "homepage": "https://github.com/prosdev/flakiness-detective-ts/tree/main/packages/adapters#readme",
+  "bugs": {
+    "url": "https://github.com/prosdev/flakiness-detective-ts/issues"
+  },
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "exports": {
@@ -10,6 +30,14 @@
       "import": "./dist/index.js",
       "require": "./dist/index.js"
     }
+  },
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE"
+  ],
+  "publishConfig": {
+    "access": "public"
   },
   "scripts": {
     "build": "tsc",
@@ -22,12 +50,27 @@
     "test:watch": "vitest"
   },
   "dependencies": {
-    "@flakiness-detective/core": "workspace:*",
-    "@flakiness-detective/utils": "workspace:*",
-    "@google-cloud/firestore": "^7.11.6",
-    "@google/generative-ai": "^0.24.1"
+    "@flakiness-detective/core": "^0.1.0",
+    "@flakiness-detective/utils": "^0.1.0"
+  },
+  "peerDependencies": {
+    "@google-cloud/firestore": "^7.0.0",
+    "@google/generative-ai": "^0.24.0"
+  },
+  "peerDependenciesMeta": {
+    "@google-cloud/firestore": {
+      "optional": true
+    },
+    "@google/generative-ai": {
+      "optional": true
+    }
   },
   "devDependencies": {
+    "@google-cloud/firestore": "^7.11.6",
+    "@google/generative-ai": "^0.24.1",
     "typescript": "^5.3.3"
+  },
+  "engines": {
+    "node": ">=22"
   }
 }
