--- a/packages/utils/package.json
+++ b/packages/utils/package.json
@@ -1,7 +1,25 @@
 {
   "name": "@flakiness-detective/utils",
   "version": "0.1.0",
-  "private": true,
+  "description": "Shared utilities for Flakiness Detective - Logger and common helpers",
+  "keywords": [
+    "testing",
+    "flakiness",
+    "test-automation",
+    "utilities",
+    "logger"
+  ],
+  "author": "prosdevlab",
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/prosdev/flakiness-detective-ts.git",
+    "directory": "packages/utils"
+  },
+  "homepage": "https://github.com/prosdev/flakiness-detective-ts#readme",
+  "bugs": {
+    "url": "https://github.com/prosdev/flakiness-detective-ts/issues"
+  },
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "exports": {
@@ -10,6 +28,14 @@
       "import": "./dist/index.js",
       "require": "./dist/index.js"
     }
+  },
+  "files": [
+    "dist",
+    "README.md",
+    "LICENSE"
+  ],
+  "publishConfig": {
+    "access": "public"
   },
   "scripts": {
     "build": "tsc",
@@ -21,9 +47,11 @@
     "test": "vitest run",
     "test:watch": "vitest"
   },
-  "dependencies": {
-  },
+  "dependencies": {},
   "devDependencies": {
     "typescript": "^5.3.3"
+  },
+  "engines": {
+    "node": ">=22"
   }
 }
