fix: restore workspace:* dependencies for local development
Changesets will automatically convert workspace:* to proper versions
when publishing to npm. Using workspace:* in source ensures:
- Correct local development workflow
- CI can install with frozen lockfile
- Packages link correctly in the monorepo

When published, Changesets transforms:
  workspace:* -> ^0.1.0 (or current version)

--- a/packages/adapters/package.json
+++ b/packages/adapters/package.json
@@ -50,8 +50,8 @@
     "test:watch": "vitest"
   },
   "dependencies": {
-    "@flakiness-detective/core": "^0.1.0",
-    "@flakiness-detective/utils": "^0.1.0"
+    "@flakiness-detective/core": "workspace:*",
+    "@flakiness-detective/utils": "workspace:*"
   },
   "peerDependencies": {
     "@google-cloud/firestore": "^7.0.0",
