--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -51,7 +51,7 @@
     "test:watch": "vitest"
   },
   "dependencies": {
-    "@flakiness-detective/utils": "^0.1.0",
+    "@flakiness-detective/utils": "workspace:*",
     "density-clustering": "^1.3.0"
   },
   "devDependencies": {
