feat(website): add Next.js documentation and marketing site
Create new website package with modern stack:
- Next.js 15.0.4 with App Router
- TypeScript with strict mode
- Tailwind CSS for styling
- Biome for linting and formatting (consistent with monorepo)
- MDX support for documentation

Features:
- Homepage with hero, features, quick start, and CTA
- Documentation hub (/docs)
- Package overview pages (/packages)
- Responsive design with dark mode support
- Navigation and footer components
- Code block component with copy functionality

Configuration:
- Static site generation (output: 'export')
- Configured for Vercel deployment
- Integrated with Turborepo build system
- Biome configuration matching monorepo standards
- Disabled noSvgWithoutTitle rule for decorative icons

Documentation:
- Comprehensive README.md with:
  - Getting started guide
  - Project structure overview
  - Development and deployment instructions
  - Customization guide
- ROADMAP.md with:
  - Feature prioritization
  - Interactive demo plans
  - Blog and search functionality
  - Performance optimization targets
  - Community features

Next Steps:
- Deploy to Vercel
- Complete documentation content
- Add interactive demo
- Implement search functionality

--- a/biome.json
+++ b/biome.json
@@ -15,6 +15,9 @@
     ],
     "rules": {
       "recommended": true,
+      "a11y": {
+        "noSvgWithoutTitle": "off"
+      },
       "correctness": {
         "noUnusedVariables": "error"
       },
